[tool.poetry]
name = "yahoo-finance-crawler"
version = "0.1.0"
description = ""
authors = ["Aluisio Lucio <aluisio18lucio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
selenium = "^4.26.1"
webdriver-manager = "^4.0.2"
beautifulsoup4 = "^4.12.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.2"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
